--- a/examples/advanced-tour.ipynb
+++ b/examples/advanced-tour.ipynb
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Next point to probe is: {'y': 1.3219469606529488, 'x': -0.331911981189704}\n"
+      "Next point to probe is: {'x': -0.331911981189704, 'y': 1.3219469606529488}\n"
      ]
     }
    ],
@@ -166,12 +166,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-19.0 {'y': -3.0, 'x': 2.0}\n",
-      "-12.194801029414048 {'y': -2.412527795983739, 'x': -1.2447710918286998}\n",
-      "0.6381713808008993 {'y': 1.4965397889559267, 'x': -0.3395244574146384}\n",
-      "0.5052897389362041 {'y': 1.2837707069731576, 'x': -0.6435716330974743}\n",
-      "0.9493808230928116 {'y': 1.2241444765020055, 'x': -0.019453291773639306}\n",
-      "{'target': 0.9493808230928116, 'params': {'y': 1.2241444765020055, 'x': -0.019453291773639306}}\n"
+      "-18.49187152919165 {'x': 1.8861546000771092, 'y': -2.9917780942581977}\n",
+      "0.7911494590443674 {'x': -0.31764604716962586, 'y': 1.3285597809731806}\n",
+      "-6.738653892565658 {'x': -1.9777941453451842, 'y': 2.9562679292990444}\n",
+      "-6.741655559035455 {'x': 1.9742487076906352, 'y': 2.960611537050956}\n",
+      "-7.311459236889235 {'x': -1.999211910635848, 'y': -1.0771641661796976}\n",
+      "{'target': 0.7911494590443674, 'params': {'x': -0.31764604716962586, 'y': 1.3285597809731806}}\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -245,36 +245,36 @@
      "text": [
       "|   iter    |  target   |     w     |     x     |     y     |\n",
       "-------------------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m-0.06199 \u001b[0m | \u001b[0m 2.085   \u001b[0m | \u001b[0m 4.406   \u001b[0m | \u001b[0m-9.998   \u001b[0m |\n",
-      "| \u001b[95m 2       \u001b[0m | \u001b[95m-0.0344  \u001b[0m | \u001b[95m 1.512   \u001b[0m | \u001b[95m-7.065   \u001b[0m | \u001b[95m-8.153   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m-0.2177  \u001b[0m | \u001b[0m 0.9313  \u001b[0m | \u001b[0m-3.089   \u001b[0m | \u001b[0m-2.065   \u001b[0m |\n",
-      "| \u001b[95m 4       \u001b[0m | \u001b[95m 0.1865  \u001b[0m | \u001b[95m 2.694   \u001b[0m | \u001b[95m-1.616   \u001b[0m | \u001b[95m 3.704   \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m-0.2187  \u001b[0m | \u001b[0m 1.022   \u001b[0m | \u001b[0m 7.562   \u001b[0m | \u001b[0m-9.452   \u001b[0m |\n",
-      "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.009975\u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.09003 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 0.4916  \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 9       \u001b[0m | \u001b[0m-0.007481\u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m-10.0    \u001b[0m |\n",
-      "| \u001b[0m 10      \u001b[0m | \u001b[0m 0.01989 \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-0.02203 \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.0189  \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 0.238   \u001b[0m |\n",
-      "| \u001b[0m 12      \u001b[0m | \u001b[0m-0.2149  \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m 5.282   \u001b[0m |\n",
-      "| \u001b[0m 13      \u001b[0m | \u001b[0m 0.05995 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 5.786   \u001b[0m |\n",
-      "| \u001b[0m 14      \u001b[0m | \u001b[0m-0.01299 \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-2.367   \u001b[0m | \u001b[0m-10.0    \u001b[0m |\n",
-      "| \u001b[0m 15      \u001b[0m | \u001b[0m 0.03637 \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m 3.773   \u001b[0m | \u001b[0m 3.575   \u001b[0m |\n",
-      "| \u001b[0m 16      \u001b[0m | \u001b[0m-0.01214 \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m 0.9779  \u001b[0m |\n",
-      "| \u001b[0m 17      \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m-10.0    \u001b[0m |\n",
-      "| \u001b[0m 18      \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-4.58    \u001b[0m | \u001b[0m 5.518   \u001b[0m |\n",
-      "| \u001b[0m 19      \u001b[0m | \u001b[0m-0.04988 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m-10.0    \u001b[0m |\n",
-      "| \u001b[0m 20      \u001b[0m | \u001b[0m 0.1246  \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 2.311   \u001b[0m | \u001b[0m 5.116   \u001b[0m |\n",
-      "| \u001b[0m 21      \u001b[0m | \u001b[0m 0.04988 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 22      \u001b[0m | \u001b[0m 0.04567 \u001b[0m | \u001b[0m 2.029   \u001b[0m | \u001b[0m 0.1434  \u001b[0m | \u001b[0m 6.398   \u001b[0m |\n",
-      "| \u001b[0m 23      \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m 4.685   \u001b[0m | \u001b[0m-4.937   \u001b[0m |\n",
-      "| \u001b[0m 24      \u001b[0m | \u001b[0m 0.06466 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.198   \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[95m 25      \u001b[0m | \u001b[95m 0.3751  \u001b[0m | \u001b[95m 5.0     \u001b[0m | \u001b[95m-0.6795  \u001b[0m | \u001b[95m 1.97    \u001b[0m |\n",
-      "| \u001b[0m 26      \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 5.0     \u001b[0m | \u001b[0m-2.001   \u001b[0m | \u001b[0m-0.5515  \u001b[0m |\n",
-      "| \u001b[0m 27      \u001b[0m | \u001b[0m 0.1072  \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m-1.419   \u001b[0m |\n",
-      "| \u001b[0m 28      \u001b[0m | \u001b[0m-0.08895 \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m-2.048   \u001b[0m | \u001b[0m-10.0    \u001b[0m |\n",
-      "| \u001b[0m 29      \u001b[0m | \u001b[0m 0.1907  \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 3.994   \u001b[0m | \u001b[0m-0.1557  \u001b[0m |\n",
-      "| \u001b[0m 30      \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m-10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
+      "|  1        | -0.06199  |  2.085    |  4.406    | -9.998    |\n",
+      "|  2        | -0.0344   |  1.512    | -7.065    | -8.153    |\n",
+      "|  3        | -0.2177   |  0.9313   | -3.089    | -2.065    |\n",
+      "|  4        |  0.1865   |  2.694    | -1.616    |  3.704    |\n",
+      "|  5        | -0.2187   |  1.022    |  7.562    | -9.452    |\n",
+      "|  6        |  0.1868   |  2.533    | -1.728    |  3.815    |\n",
+      "|  7        |  0.04138  |  3.494    |  0.1725   |  6.707    |\n",
+      "|  8        |  0.0      |  4.737    | -3.817    |  4.586    |\n",
+      "|  9        |  0.1096   |  1.001    |  0.7072   |  3.447    |\n",
+      "|  10       |  0.04164  |  4.762    |  2.874    |  1.923    |\n",
+      "|  11       |  0.1892   |  0.04772  | -2.696    |  6.551    |\n",
+      "|  12       |  0.2199   |  0.02389  | -5.944    |  9.5      |\n",
+      "|  13       | -0.457    |  0.07146  | -9.618    |  7.259    |\n",
+      "|  14       |  0.1358   |  0.329    | -3.351    |  9.922    |\n",
+      "|  15       |  0.04341  |  3.041    | -5.183    |  9.877    |\n",
+      "|  16       |  0.08249  |  0.2258   |  5.954    |  6.066    |\n",
+      "|  17       |  0.0943   |  0.1087   |  1.653    |  8.596    |\n",
+      "|  18       |  0.02195  |  2.85     |  6.579    |  9.923    |\n",
+      "|  19       |  0.08179  |  0.03698  |  9.263    |  2.291    |\n",
+      "|  20       |  0.01622  |  4.217    |  9.192    |  4.37     |\n",
+      "|  21       |  0.2718   |  0.02731  | -4.618    |  7.787    |\n",
+      "|  22       |  0.1636   |  0.01546  |  5.282    | -0.4399   |\n",
+      "|  23       |  0.05458  |  2.567    |  7.691    | -1.721    |\n",
+      "|  24       |  0.0      |  0.01681  | -4.034    |  4.158    |\n",
+      "|  25       |  0.1324   |  0.2598   |  4.813    |  2.388    |\n",
+      "|  26       | -0.01641  |  4.777    | -1.422    | -9.572    |\n",
+      "|  27       |  0.0      |  0.5638   |  3.639    | -3.352    |\n",
+      "|  28       | -0.01294  |  4.791    | -9.924    | -2.469    |\n",
+      "|  29       |  0.04902  |  0.06084  |  9.897    |  9.765    |\n",
+      "|  30       |  0.1248   |  1.479    | -3.513    |  7.389    |\n",
       "=============================================================\n"
      ]
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +312,12 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.7862  \u001b[0m | \u001b[0m-0.3319  \u001b[0m | \u001b[0m 1.322   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m-18.96   \u001b[0m | \u001b[0m 1.993   \u001b[0m | \u001b[0m-2.998   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 0.7858  \u001b[0m | \u001b[0m-0.3333  \u001b[0m | \u001b[0m 1.321   \u001b[0m |\n",
-      "| \u001b[0m 4       \u001b[0m | \u001b[0m 0.5787  \u001b[0m | \u001b[0m-0.429   \u001b[0m | \u001b[0m 1.487   \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.7798  \u001b[0m | \u001b[0m 0.02543 \u001b[0m | \u001b[0m 1.469   \u001b[0m |\n",
-      "| \u001b[95m 6       \u001b[0m | \u001b[95m 0.9779  \u001b[0m | \u001b[95m 0.1301  \u001b[0m | \u001b[95m 0.9282  \u001b[0m |\n",
+      "|  1        |  0.7862   | -0.3319   |  1.322    |\n",
+      "|  2        | -18.49    |  1.886    | -2.992    |\n",
+      "|  3        |  0.7911   | -0.3176   |  1.329    |\n",
+      "|  4        | -6.173    | -1.796    |  2.987    |\n",
+      "|  5        | -2.834    |  1.502    |  2.256    |\n",
+      "|  6        | -4.831    | -1.997    | -0.3574   |\n",
       "=================================================\n"
      ]
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt.event import DEFAULT_EVENTS, Events"
+    "from bayes_opt.event import OptimizationEvent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_observer = BasicObserver()\n",
     "\n",
     "optimizer.subscribe(\n",
-    "    event=Events.OPTIMIZATION_STEP,\n",
+    "    event=OptimizationEvent.STEP,\n",
     "    subscriber=my_observer,\n",
     "    callback=None, # Will use the `update` method as callback\n",
     ")"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
     "    print(\"Go nuts here!\")\n",
     "\n",
     "optimizer.subscribe(\n",
-    "    event=Events.OPTIMIZATION_START,\n",
+    "    event=OptimizationEvent.START,\n",
     "    subscriber=\"Any hashable object\",\n",
     "    callback=my_callback,\n",
     ")"
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -466,9 +466,9 @@
      "output_type": "stream",
      "text": [
       "Go nuts here!\n",
-      "Event `optimization:step` was observed\n",
-      "Event `optimization:step` was observed\n",
-      "Event `optimization:step` was observed\n"
+      "Event `2` was observed\n",
+      "Event `2` was observed\n",
+      "Event `2` was observed\n"
      ]
     }
    ],
@@ -480,27 +480,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a list of all default events you can checkout `DEFAULT_EVENTS`"
+    "For a list of all default events you can checkout `OptimizationEvent.__members__`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['optimization:start', 'optimization:step', 'optimization:end']"
+       "mappingproxy({'START': <OptimizationEvent.START: 1>,\n",
+       "              'STEP': <OptimizationEvent.STEP: 2>,\n",
+       "              'END': <OptimizationEvent.END: 3>})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DEFAULT_EVENTS"
+    "OptimizationEvent.__members__"
    ]
   }
  ],
@@ -520,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
