--- a/examples/basic-tour.ipynb
+++ b/examples/basic-tour.ipynb
@@ -106,11 +106,11 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m-7.135   \u001b[0m | \u001b[0m 2.834   \u001b[0m | \u001b[0m 1.322   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m-7.78    \u001b[0m | \u001b[0m 2.0     \u001b[0m | \u001b[0m-1.186   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m-19.0    \u001b[0m | \u001b[0m 4.0     \u001b[0m | \u001b[0m 3.0     \u001b[0m |\n",
-      "| \u001b[0m 4       \u001b[0m | \u001b[0m-16.3    \u001b[0m | \u001b[0m 2.378   \u001b[0m | \u001b[0m-2.413   \u001b[0m |\n",
-      "| \u001b[95m 5       \u001b[0m | \u001b[95m-4.441   \u001b[0m | \u001b[95m 2.105   \u001b[0m | \u001b[95m-0.005822\u001b[0m |\n",
+      "|  1        | -7.135    |  2.834    |  1.322    |\n",
+      "|  2        | -7.78     |  2.0      | -1.186    |\n",
+      "|  3        | -7.11     |  2.218    | -0.7867   |\n",
+      "|  4        | -12.4     |  3.66     |  0.9608   |\n",
+      "|  5        | -4.335    |  2.299    |  0.7729   |\n",
       "=================================================\n"
      ]
     }
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'target': -4.441293113411222, 'params': {'y': -0.005822117636089974, 'x': 2.104665051994087}}\n"
+      "{'target': -4.335211455389778, 'params': {'x': 2.298613426347459, 'y': 0.7728705840165757}}\n"
      ]
     }
    ],
@@ -163,15 +163,15 @@
      "output_type": "stream",
      "text": [
       "Iteration 0: \n",
-      "\t{'target': -7.135455292718879, 'params': {'y': 1.3219469606529488, 'x': 2.8340440094051482}}\n",
+      "\t{'target': -7.135455292718879, 'params': {'x': 2.8340440094051482, 'y': 1.3219469606529488}}\n",
       "Iteration 1: \n",
-      "\t{'target': -7.779531005607566, 'params': {'y': -1.1860045642089614, 'x': 2.0002287496346898}}\n",
+      "\t{'target': -7.779531005607566, 'params': {'x': 2.0002287496346898, 'y': -1.1860045642089614}}\n",
       "Iteration 2: \n",
-      "\t{'target': -19.0, 'params': {'y': 3.0, 'x': 4.0}}\n",
+      "\t{'target': -7.109925819441113, 'params': {'x': 2.2175526295255183, 'y': -0.7867249801593896}}\n",
       "Iteration 3: \n",
-      "\t{'target': -16.29839645063864, 'params': {'y': -2.412527795983739, 'x': 2.3776144540856503}}\n",
+      "\t{'target': -12.397162416009818, 'params': {'x': 3.660003815774634, 'y': 0.9608275029525108}}\n",
       "Iteration 4: \n",
-      "\t{'target': -4.441293113411222, 'params': {'y': -0.005822117636089974, 'x': 2.104665051994087}}\n"
+      "\t{'target': -4.335211455389778, 'params': {'x': 2.298613426347459, 'y': 0.7728705840165757}}\n"
      ]
     }
    ],
@@ -209,11 +209,11 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 6       \u001b[0m | \u001b[0m-5.145   \u001b[0m | \u001b[0m 2.115   \u001b[0m | \u001b[0m-0.2924  \u001b[0m |\n",
-      "| \u001b[0m 7       \u001b[0m | \u001b[0m-5.379   \u001b[0m | \u001b[0m 2.337   \u001b[0m | \u001b[0m 0.04124 \u001b[0m |\n",
-      "| \u001b[95m 8       \u001b[0m | \u001b[95m-3.581   \u001b[0m | \u001b[95m 1.874   \u001b[0m | \u001b[95m-0.03428 \u001b[0m |\n",
-      "| \u001b[95m 9       \u001b[0m | \u001b[95m-2.624   \u001b[0m | \u001b[95m 1.702   \u001b[0m | \u001b[95m 0.1472  \u001b[0m |\n",
-      "| \u001b[95m 10      \u001b[0m | \u001b[95m-1.762   \u001b[0m | \u001b[95m 1.442   \u001b[0m | \u001b[95m 0.1735  \u001b[0m |\n",
+      "|  6        | -1.994    |  1.72     |  1.187    |\n",
+      "|  7        |  0.8788   |  0.2802   |  1.207    |\n",
+      "|  8        | -3.077    | -0.7016   |  2.893    |\n",
+      "|  9        | -1.654    | -1.466    |  0.2892   |\n",
+      "|  10       | -18.1     | -1.984    | -2.893    |\n",
       "=================================================\n"
      ]
     }
@@ -295,8 +295,8 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[95m 11      \u001b[0m | \u001b[95m 0.66    \u001b[0m | \u001b[95m 0.5     \u001b[0m | \u001b[95m 0.7     \u001b[0m |\n",
-      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m-0.3     \u001b[0m | \u001b[0m 0.1     \u001b[0m |\n",
+      "|  11       |  0.66     |  0.5      |  0.7      |\n",
+      "|  12       |  0.1      | -0.3      |  0.1      |\n",
       "=================================================\n"
      ]
     }
@@ -323,7 +323,7 @@
    "outputs": [],
    "source": [
     "from bayes_opt.logger import JSONLogger\n",
-    "from bayes_opt.event import Events"
+    "from bayes_opt.event import OptimizationEvent"
    ]
   },
   {
@@ -334,7 +334,7 @@
     "1. Instantiating an observer object.\n",
     "2. Tying the observer object to a particular event fired by an optimizer.\n",
     "\n",
-    "The `BayesianOptimization` object fires a number of internal events during optimization, in particular, everytime it probes the function and obtains a new parameter-target combination it will fire an `Events.OPTIMIZATION_STEP` event, which our logger will listen to.\n",
+    "The `BayesianOptimization` object fires a number of internal events during optimization, in particular, everytime it probes the function and obtains a new parameter-target combination it will fire an `OptimizationEvent.STEP` event, which our logger will listen to.\n",
     "\n",
     "**Caveat:** The logger will not look back at previously probed points."
    ]
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "logger = JSONLogger(path=\"./logs.json\")\n",
-    "optimizer.subscribe(Events.OPTIMIZATION_STEP, logger)"
+    "optimizer.subscribe(OptimizationEvent.STEP, logger)"
    ]
   },
   {
@@ -360,11 +360,11 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 13      \u001b[0m | \u001b[0m-12.48   \u001b[0m | \u001b[0m-1.266   \u001b[0m | \u001b[0m-2.446   \u001b[0m |\n",
-      "| \u001b[0m 14      \u001b[0m | \u001b[0m-3.854   \u001b[0m | \u001b[0m-1.069   \u001b[0m | \u001b[0m-0.9266  \u001b[0m |\n",
-      "| \u001b[0m 15      \u001b[0m | \u001b[0m 0.3932  \u001b[0m | \u001b[0m 0.3099  \u001b[0m | \u001b[0m 0.2853  \u001b[0m |\n",
-      "| \u001b[95m 16      \u001b[0m | \u001b[95m 0.8768  \u001b[0m | \u001b[95m 0.02197 \u001b[0m | \u001b[95m 0.6497  \u001b[0m |\n",
-      "| \u001b[95m 17      \u001b[0m | \u001b[95m 0.9446  \u001b[0m | \u001b[95m 0.198   \u001b[0m | \u001b[95m 0.8727  \u001b[0m |\n",
+      "|  13       | -12.48    | -1.266    | -2.446    |\n",
+      "|  14       | -3.854    | -1.069    | -0.9266   |\n",
+      "|  15       | -4.25     |  1.134    |  2.991    |\n",
+      "|  16       | -3.928    | -1.999    |  1.965    |\n",
+      "|  17       | -7.0      | -2.0      |  3.0      |\n",
       "=================================================\n"
      ]
     }
@@ -454,16 +454,16 @@
      "text": [
       "|   iter    |  target   |     x     |     y     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.6131  \u001b[0m | \u001b[0m 0.5571  \u001b[0m | \u001b[0m 0.7233  \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 0.8609  \u001b[0m | \u001b[0m-0.3295  \u001b[0m | \u001b[0m 1.175   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 0.3761  \u001b[0m | \u001b[0m 0.2406  \u001b[0m | \u001b[0m 1.752   \u001b[0m |\n",
-      "| \u001b[0m 4       \u001b[0m | \u001b[0m-0.7845  \u001b[0m | \u001b[0m-0.8972  \u001b[0m | \u001b[0m 1.99    \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.1401  \u001b[0m | \u001b[0m-0.8733  \u001b[0m | \u001b[0m 0.6882  \u001b[0m |\n",
-      "| \u001b[0m 6       \u001b[0m | \u001b[0m-1.798   \u001b[0m | \u001b[0m 1.545   \u001b[0m | \u001b[0m 1.642   \u001b[0m |\n",
-      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.9331  \u001b[0m | \u001b[0m 0.05549 \u001b[0m | \u001b[0m 1.253   \u001b[0m |\n",
-      "| \u001b[0m 8       \u001b[0m | \u001b[0m-5.369   \u001b[0m | \u001b[0m 2.0     \u001b[0m | \u001b[0m-0.5391  \u001b[0m |\n",
-      "| \u001b[95m 9       \u001b[0m | \u001b[95m 0.97    \u001b[0m | \u001b[95m-0.1587  \u001b[0m | \u001b[95m 0.9305  \u001b[0m |\n",
-      "| \u001b[0m 10      \u001b[0m | \u001b[0m 0.7718  \u001b[0m | \u001b[0m 0.4293  \u001b[0m | \u001b[0m 1.21    \u001b[0m |\n",
+      "|  1        | -0.01477  |  0.154    |  0.004482 |\n",
+      "|  2        |  0.9579   | -0.02177  |  1.204    |\n",
+      "|  3        | -3.15     |  1.992    |  0.5709   |\n",
+      "|  4        | -0.3771   | -1.084    |  0.551    |\n",
+      "|  5        | -11.58    |  1.988    | -1.938    |\n",
+      "|  6        |  0.4237   |  0.7564   |  1.065    |\n",
+      "|  7        |  0.8804   | -0.0304   |  0.6555   |\n",
+      "|  8        |  0.9096   |  0.2827   |  0.8974   |\n",
+      "|  9        |  0.6527   |  0.3099   |  1.501    |\n",
+      "|  10       |  0.9946   |  0.06339  |  1.037    |\n",
       "=================================================\n"
      ]
     }
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
