dev(hansbug): rename project to hbayes

--- a/docs/source/best_practice/advanced-tour.ipynb
+++ b/docs/source/best_practice/advanced-tour.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt import BayesianOptimization"
+    "from hbayes import BayesianOptimization"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt import UtilityFunction\n",
+    "from hbayes import UtilityFunction\n",
     "\n",
     "utility = UtilityFunction(kind=\"ucb\", kappa=2.5, xi=0.0)"
    ]
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "from bayes_opt.target_space import FuncFailed\n",
+    "from hbayes.target_space import FuncFailed\n",
     "\n",
     "\n",
     "def func_with_exception(x, y):\n",
@@ -335,49 +335,49 @@
       "-------------------------------------------------\n",
       "|  1        | -7.135    |  2.834    |  1.322    |\n",
       "|  2        | -7.78     |  2.0      | -1.186    |\n",
-      "|  3        | <skipped> |  2.294    | -2.446    |\n",
-      "|  4        | -8.341    |  2.373    | -0.9266   |\n",
+      "|  3        | -16.13    |  2.294    | -2.446    |\n",
+      "|  4        | <skipped> |  2.373    | -0.9266   |\n",
       "|  5        | -7.392    |  2.794    |  0.2329   |\n",
       "|  6        | -7.069    |  2.838    |  1.111    |\n",
-      "|  7        | <skipped> |  2.409    |  2.269    |\n",
+      "|  7        | -6.412    |  2.409    |  2.269    |\n",
       "|  8        | -3.223    |  2.055    |  1.023    |\n",
-      "|  9        | <skipped> |  2.835    |  0.3521   |\n",
+      "|  9        | -7.455    |  2.835    |  0.3521   |\n",
       "|  10       | -12.11    |  2.281    | -1.811    |\n",
-      "|  11       | -15.25    |  3.601    |  2.81     |\n",
-      "|  12       | <skipped> |  2.627    |  1.154    |\n",
-      "|  13       | <skipped> |  3.753    |  2.368    |\n",
+      "|  11       | <skipped> |  3.601    |  2.81     |\n",
+      "|  12       | -5.924    |  2.627    |  1.154    |\n",
+      "|  13       | -14.95    |  3.753    |  2.368    |\n",
       "|  14       | -17.89    |  2.17     | -2.766    |\n",
       "|  15       | -6.084    |  2.34     |  2.269    |\n",
-      "|  16       | -7.0      |  2.0      |  3.0      |\n",
-      "|  17       | -17.14    |  4.0      | -0.4635   |\n",
-      "|  18       | -3.505    |  2.0      |  0.2897   |\n",
-      "|  19       | -3.356    |  2.0      |  1.596    |\n",
-      "|  20       | -3.053    |  2.0      |  0.7706   |\n",
-      "|  21       | -3.008    |  2.0      |  1.09     |\n",
-      "|  22       | -3.034    |  2.0      |  1.184    |\n",
-      "|  23       | -3.001    |  2.0      |  0.9696   |\n",
-      "|  24       | -3.0      |  2.0      |  0.9897   |\n",
-      "|  25       | -3.0      |  2.0      |  0.9944   |\n",
-      "|  26       | -3.0      |  2.0      |  0.9975   |\n",
-      "|  27       | -3.0      |  2.0      |  1.001    |\n",
-      "|  28       | -3.0      |  2.0      |  0.9982   |\n",
-      "|  29       | -3.0      |  2.0      |  1.016    |\n",
-      "|  30       | -3.002    |  2.0      |  0.9599   |\n",
-      "|  31       | -3.001    |  2.0      |  0.9745   |\n",
-      "|  32       | <skipped> |  2.0      |  1.024    |\n",
-      "|  33       | -3.001    |  2.0      |  1.024    |\n",
-      "|  34       | -3.0      |  2.0      |  1.022    |\n",
-      "|  35       | -3.001    |  2.0      |  0.9654   |\n",
-      "|  36       | -3.0      |  2.0      |  1.021    |\n",
-      "|  37       | <skipped> |  2.0      |  1.019    |\n",
-      "|  38       | -3.001    |  2.0      |  0.9694   |\n",
+      "|  16       | <skipped> |  2.0      |  3.0      |\n",
+      "|  17       | -3.331    |  2.0      |  0.4243   |\n",
+      "|  18       | -3.033    |  2.0      |  0.8184   |\n",
+      "|  19       | -3.128    |  2.0      |  1.357    |\n",
+      "|  20       | -18.44    |  4.0      | -0.8539   |\n",
+      "|  21       | -7.0      |  2.0      |  3.0      |\n",
+      "|  22       | -3.002    |  2.0      |  1.04     |\n",
+      "|  23       | -3.0      |  2.0      |  0.9842   |\n",
+      "|  24       | <skipped> |  2.0      |  0.9933   |\n",
+      "|  25       | -3.0      |  2.0      |  0.9932   |\n",
+      "|  26       | -3.001    |  2.0      |  1.037    |\n",
+      "|  27       | -3.001    |  2.0      |  0.9758   |\n",
+      "|  28       | -3.0      |  2.0      |  0.9814   |\n",
+      "|  29       | <skipped> |  2.0      |  1.045    |\n",
+      "|  30       | -3.0      |  2.0      |  0.9874   |\n",
+      "|  31       | -3.002    |  2.0      |  1.05     |\n",
+      "|  32       | -3.0      |  2.0      |  0.9786   |\n",
+      "|  33       | -3.0      |  2.0      |  0.9824   |\n",
+      "|  34       | -3.0      |  2.0      |  0.9857   |\n",
+      "|  35       | -3.002    |  2.0      |  1.04     |\n",
+      "|  36       | -3.0      |  2.0      |  0.981    |\n",
+      "|  37       | -3.001    |  2.0      |  1.031    |\n",
+      "|  38       | -3.0      |  2.0      |  0.9799   |\n",
       "|  39       | -3.0      |  2.0      |  1.021    |\n",
-      "|  40       | -3.001    |  2.0      |  0.975    |\n",
-      "|  41       | -3.0      |  2.0      |  1.021    |\n",
-      "|  42       | <skipped> |  4.0      | -3.0      |\n",
-      "|  43       | -3.0      |  2.0      |  1.019    |\n",
-      "|  44       | -3.001    |  2.0      |  0.9717   |\n",
-      "|  45       | -3.0      |  2.0      |  1.019    |\n",
+      "|  40       | -3.0      |  2.0      |  0.9797   |\n",
+      "|  41       | -3.0      |  2.0      |  0.9816   |\n",
+      "|  42       | <skipped> |  2.0      |  0.9842   |\n",
+      "|  43       | <skipped> |  2.0      |  1.029    |\n",
+      "|  44       | -3.0      |  2.0      |  0.9843   |\n",
+      "|  45       | -3.0      |  2.0      |  0.988    |\n",
       "=================================================\n"
      ]
     }
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "{'target': -3.000000400520359, 'params': {'x': 2.0, 'y': 1.0006328667783022}}"
+       "{'target': -3.0000463923784926, 'params': {'x': 2.0, 'y': 0.9931888049145412}}"
       ]
      },
      "execution_count": 16,
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt.event import OptimizationEvent"
+    "from hbayes.event import OptimizationEvent"
    ]
   },
   {
