--- a/docs/source/best_practice/basic-tour.ipynb
+++ b/docs/source/best_practice/basic-tour.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt import BayesianOptimization"
+    "from hbayes import BayesianOptimization"
    ]
   },
   {
@@ -322,8 +322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt.logger import JSONLogger\n",
-    "from bayes_opt.event import OptimizationEvent"
+    "from hbayes.logger import JSONLogger\n",
+    "from hbayes.event import OptimizationEvent"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt.util import load_logs"
+    "from hbayes.util import load_logs"
    ]
   },
   {
