--- a/docs/source/best_practice/domain_reduction.ipynb
+++ b/docs/source/best_practice/domain_reduction.ipynb
@@ -59,8 +59,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from bayes_opt import BayesianOptimization\n",
-    "from bayes_opt import SequentialDomainReductionTransformer\n",
+    "from hbayes import BayesianOptimization\n",
+    "from hbayes import SequentialDomainReductionTransformer\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe21008b208>"
+       "<matplotlib.legend.Legend at 0x7f2e01d452e8>"
       ]
      },
      "execution_count": 9,
@@ -249,7 +249,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe20ff8b6a0>"
+       "<matplotlib.legend.Legend at 0x7f2e01c47710>"
       ]
      },
      "execution_count": 11,
